Fix overlap with services

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -243,7 +243,11 @@ section {
   justify-content: space-around;
 }
 
-section span {
+.half {
+  width: 48%;
+}
+
+.third {
   width: 30%;
 }
 
